# app/Http/Resources/ScheduleResource.php
@@ -10,6 +10,8 @@ declare(strict_types=1);
 
 namespace App\Http\Resources;
 
+use App\Http\Resources\ManagerApi\BranchResource;
+use App\Http\Resources\PublicApi\ClassroomResource;
 use Carbon\Carbon;
 use Illuminate\Http\Resources\Json\JsonResource;
 
@@ -33,11 +35,25 @@ class ScheduleResource extends JsonResource
             'weekday' => $this->weekday,
             'starts_at' => $this->starts_at ? Carbon::parse($this->starts_at)->format('H:i:00') : null,
             'ends_at' => $this->ends_at ? Carbon::parse($this->ends_at)->format('H:i:00') : null,
-            'branch_id' => $this->branch_id,
-            'classroom_id' => $this->classroom_id,
-            'course' => $this->whenLoaded('course', function () {
-                return new CourseResource($this->course);
-            }),
+            'duration' => Carbon::parse($this->ends_at)->diffInMinutes(Carbon::parse($this->starts_at)),
+            'branch' => $this->whenLoaded(
+                'branch',
+                function () {
+                    return new BranchResource($this->branch);
+                }
+            ),
+            'classroom' => $this->whenLoaded(
+                'classroom',
+                function () {
+                    return new ClassroomResource($this->classroom);
+                }
+            ),
+            'course' => $this->whenLoaded(
+                'course',
+                function () {
+                    return new CourseResource($this->course);
+                }
+            ),
         ];
     }
 }
